always run git in project dir